Update prototype of get_mempolicy

https://bugzilla.kernel.org/show_bug.cgi?id=97051

The prototype of get_mempolicy is incorrect. The nodemask is written to,
so should not be const. Also make the flags unsigned.

The manpage also has unsigned long addr instead of void * addr,
but I kept void * to not cause warnings in existing code passing
a pointer.

Signed-off-by: Andi Kleen <ak@linux.intel.com>